# dnscrypt-plugin-whitelist-only

./: CMakeLists.txt  LICENSE  README.md  whitelist.c
